[project]
name = "ra28-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "voronovmaksim88",email = "voronovmaksim88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pymodbus (>=3.11.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
