[tool.poetry]
name = "ra28-tg-bot"
version = "0.1.0"
description = "Telegram bot для мониторинга температуры системы отопления через Modbus TCP"
authors = ["voronovmaksim88 <voronovmaksim88@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
pymodbus = "^3.11.3"
python-telegram-bot = {extras = ["job-queue"], version = "^20.0"}
python-dotenv = "^1.0.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
